# yente-mcp

./: .env.example  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  spec.md
src/yente_mcp/: __main__.py  server.py
tests/: test_tools.py
