[project]
name = "yente-mcp"
version = "0.1.0"
description = "MCP server for OpenSanctions / yente – sanctions, PEP and watchlist screening"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.8.0",
    "httpx>=0.27.0",
]

[project.scripts]
yente-mcp = "yente_mcp.server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yente_mcp"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
